# converge

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  compose.yaml  cspell.json  install.sh
.cargo/: audit.toml  config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
.sqlx/: query-0c8520be3cff3cd9b1071ecefc9d1313cde764febcfac3b533c341daeda83c4c.json  query-0e62a646cd9348468b19af6a1be44e51be36e469e6e548c4945c02a045c432ba.json  query-1198812f979f0c142094557ee3a7eb4d3ca427a2776a4c91873e1eba7c439358.json  query-176673f3f8568ed1b2b8c3e3c54b6afc90009a87d330adc9c6f7fc42b1b56de3.json  query-1bad5570fcde40d091e8720d24067aadcaea3ecd7988f167fc8528180f608883.json  query-1c009003cc3c3c23960d0052a4d001536247bd098049e12fd12551ef4be86838.json  query-205cefa863252b1435d79c6d07ae736b253613d0aedb091fcc54a2753396dca4.json  query-2200ea830a9a85c166da1ea42407598f966175a31e9c51008e5a946ec40c61ae.json  query-277c4f173a07fec153d172f995f69ffdd6876e55200a98f8cdbbd73d042d67e0.json  query-2d17540e2f792cb7bd9f280b47d0ad1d5e4954014c768ac4fc37e3b153d0112a.json  query-2f275e902c4d875636e38a88e54cefc7fce6a38f4b7282cb590cb6610039a6cd.json  query-320aeaa4d041ca1444070cc770a69eab2f61b83584ed31159ec82e6dcb53e798.json  query-343f96b3c2645500f3b23561fb690dae617b1adbe9f3c1d8192feef509106547.json  query-370ed7fc1af2567499f3d278fe07892188c3387d64e589df0423beeec6072f21.json  query-38f281a6a283a6c4bd13d7cfa51ec003482cf09a0e500de7ecc7f889fcf5ab0e.json  query-3e836a101cad10db5b06f0560560a867f99da3b98b2306b694e2b9739bf350e0.json  query-409838f93df148e96f50c81171a9673e339f94cbb6f7c05dcb3b6c2453b03b44.json  query-4193e8e655f73d98e504b62b7f192f7133e0c97c91cc78825c9e3f5cd155d5bb.json  query-4309b7e7ea0cdd3678b3e33c49ef454fcc53875fa9eef56206d44efe2e9815e7.json  query-46aea1058069ee263776d9713bd21dd7140aafa189f157b7e58656363f98aefc.json  query-4b9e75472125e640a754c9129bcda48b874b382536ae7b1a6f17968205cda8ba.json  query-4f3433fa40dc88a47da5845a59ca2d5ea71399197abf9b4875eda2f83539b731.json  query-57f1dc65df70d3dd1761e64f61157467fb56ecb2fcda4a35b8aca5d2c8cdaead.json  query-596bf8799c39da009ca44cce4302a813efdfcbc08be4ecf3ad0ac6270c1e79de.json  query-5985c452280ba5530b64a4f952e217b028ef02e08dfedbfb259fb7df9d9e48a9.json  query-5a54a23499cb5fc547d228089c4e8ebde06255a9a90af8c5e657a68983587024.json  query-5c5b9b81d2c7a082b99e6e4d92868b78dc9d5ed88a9349967e0cc4c0e3afdf0d.json  query-5c8ae134221f5bef6dfec9d2ace82663791a6e8228d26b4c147c7d0a364156c1.json  query-61fd5e66b7ce481479d9a46955fa99666d9fe0de222be11df90e716dc3a206f1.json  query-63b00411d2212b2365c5e9fabf77e39983efef061cc949310c38ed429166a150.json  query-67a67bbe769b45153d074500fe7cfcb21cdb1de621e7a2612edadeb47974d945.json  query-69f9c75f9fffb8c93ab06e83141cc978390c063dd77ef0d389868caf04a3b07f.json  query-7466de2726a14c163baed819030b2fb57dcd358fe5b7d0364f73c0de9229e4bd.json  query-7493400e19afb4eb0bd07e42c6ccf4d202801f57b5457c4d52504940b25d9cb4.json  query-754dd50e0f839add984807f0a3b8f8753f3cb5716cb8014f869530a1b7d365ad.json  query-77bc6ec9aa16f374846cea93337524d3f464addb8d053e775486fdae3bf5ab2a.json  query-7fff0fdb9639387b9c80e59b0556754524d8c49b1156f1884ecb66379b65920a.json  query-800e5acb79eb1f10686f0743acd063ae089a274297c2f0bc9ca200dc56460281.json  query-833e582ca4d8ccbead4c49ae5e966fbc31412db1ad0e77fb99a1ffe77f60638c.json  query-9126bad6e6ee9d70ad1b4415f39ab1a3e6af36e750086ee50e204cff49576690.json  (+37 more)
crates/converge-cli/: Cargo.toml
crates/converge-cli/src/: config.rs  hook.rs  main.rs  marker.rs  project.rs  setup.rs  skew.rs  transcript.rs  update.rs  watermark.rs
crates/converge-client/: Cargo.toml
crates/converge-client/src/: lib.rs
crates/converge-client/tests/: client.rs
crates/converge-comparison/: Cargo.toml
crates/converge-comparison/fixtures/: internal-signal.json  one-signal.json  trap-no-signal.json
crates/converge-comparison/models/: models.toml
crates/converge-comparison/prompts/: baseline_v1.md  compact_v1.md  conservative_v1.md  procedure_v1.md  prompts.toml
crates/converge-comparison/scenarios/: scenarios.toml
crates/converge-comparison/src/: main.rs  models.rs  prompts.rs  report.rs  run.rs  scenario.rs
crates/converge-expert/: Cargo.toml
crates/converge-expert/src/: chat.rs  expert.rs  lib.rs  related.rs  signals.rs
crates/converge-expert/src/clients/: completions.rs  genai.rs  mod.rs
crates/converge-expert/tests/: completions.rs  dataset.rs  signals.rs  wire.rs
crates/converge-expert/tests/fixtures/: signals.json  signals_request.json
crates/converge-server/: Cargo.toml
crates/converge-server/src/: auth.rs  config.rs  lib.rs  main.rs  oauth.rs  oidc.rs  telemetry.rs
crates/converge-server/src/http/: agent.rs  decision.rs  error.rs  evidence.rs  group.rs  mod.rs  oauth.rs  page.rs  project.rs  session.rs  signal.rs  signin.rs  token.rs  user.rs
crates/converge-server/src/mcp/: mod.rs
crates/converge-server/tests/: api.rs  connector.rs  decision.rs  evidence.rs  health.rs  mcp.rs  oauth.rs  session.rs  signal.rs  signin.rs  token.rs
crates/converge-server/tests/common/: mod.rs
crates/converge-storage/: Cargo.toml
crates/converge-storage-postgres/: Cargo.toml
crates/converge-storage-postgres/migrations/: 0001_decision_core.sql
crates/converge-storage-postgres/src/: lib.rs  wire.rs
crates/converge-storage-postgres/tests/: authors.rs  decisions.rs  evidence.rs  groups_projects.rs  search.rs  signals.rs  tokens.rs
crates/converge-storage-postgres/tests/common/: mod.rs
crates/converge-storage/src/: agent.rs  decision.rs  group.rs  ids.rs  lib.rs  message.rs  project.rs  session.rs  signal.rs  token.rs  user.rs
crates/converge-web/: Cargo.toml  Trunk.toml  index.html
crates/converge-web/src/: command_snippet.rs  dashboard.rs  data.rs  decision_detail.rs  expert.rs  main.rs  modals.rs  mutate.rs  onboard.rs  project_log.rs  route.rs  search.rs  settings.rs  signals.rs  source_viewer.rs  store.rs  when.rs
crates/converge-web/src/seed/: assemble.rs  enums.rs  mod.rs  rows.rs  seed.json  validate.rs  wire.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
(+41 files in other folders)
