[workspace]
resolver = "3"
members = [
    "crates/converge-client",
    "crates/converge-server",
    "crates/converge-storage",
    "crates/converge-storage-postgres",
    "crates/converge-ui",
    "crates/converge-web",
    "crates/xtask",
]
# xtask (dev tooling: testcontainers dev DB + sqlx offline-cache generation) is
# a member so `cargo xtask` / `-p xtask` resolve it, but it's out of the default
# set so a bare `cargo check`/`build`/`test` never compiles its Docker deps.
# The wasm crates (converge-ui, converge-web) are likewise out of the default
# set — build them with `-p` / trunk; CI checks them on wasm32.
default-members = [
    "crates/converge-client",
    "crates/converge-server",
    "crates/converge-storage",
    "crates/converge-storage-postgres",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/converge-lab/converge"

[workspace.dependencies]
converge-storage = { path = "crates/converge-storage" }
converge-storage-postgres = { path = "crates/converge-storage-postgres" }
converge-server = { path = "crates/converge-server" }
converge-ui = { path = "crates/converge-ui" }
converge-client = { path = "crates/converge-client" }

# Web UI (Leptos CSR → wasm)
leptos = { version = "0.8", features = ["csr"] }
# Fine-grained reactive state store (`#[derive(Store)]`). Pinned to the
# version leptos 0.8 already resolves internally so we don't pull a second
# copy.
reactive_stores = "0.4"
markdown = "1"

# HTTP client — compiles native (rustls) and to wasm (browser fetch; the
# TLS feature is target-gated away there).
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
url = "2"

# Async
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "net",
] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

# MCP server (the /mcp endpoint) — stateless streamable-HTTP.
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }

# Auth: token minting + hashing, session JWTs, cookie extraction
rand = "0.9"
sha2 = "0.10"
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["cookie"] }

# Binary plumbing
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# PostgreSQL — the bundled storage backend. tls-rustls keeps it pure-Rust
# and cross-compilable.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"

# Ids / time — ulid's `uuid` feature gives the Ulid ↔ Uuid conversions the
# storage boundary relies on.
ulid = { version = "1", features = ["serde", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }

# Dev / test infra
testcontainers-modules = { version = "0.15", features = ["postgres"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
