[package]
name = "converge-client"
description = "Typed HTTP client for the Converge API — native and WebAssembly."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
converge-storage.workspace = true
reqwest.workspace = true
serde.workspace = true
url.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# ulid/uuid (via converge-storage) pull getrandom, which refuses
# wasm32-unknown-unknown unless the browser backend is opted into.
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
axum.workspace = true
converge-server.workspace = true
converge-storage-postgres.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
ulid.workspace = true
