[package]
name = "converge-comparison"
description = "Model-comparison runner for the Converge expert: scenarios × models, scored and saved to disk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
converge-expert.workspace = true
converge-storage.workspace = true

anyhow.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
