[package]
name = "converge-expert"
description = "The expert-model layer: named model endpoints, per-job routing."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
genai.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
