[package]
name = "converge-storage-postgres"
description = "PostgreSQL implementation of the Converge storage trait."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
converge-storage.workspace = true
sqlx.workspace = true
serde_json.workspace = true
ulid.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
testcontainers-modules.workspace = true
