[package]
name = "converge-web"
description = "The Converge web UI (Leptos, client-side WebAssembly)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
leptos.workspace = true
reactive_stores.workspace = true
converge-ui.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `when()` reads the current time from the JS clock.
js-sys = "0.3"
# Drawer focus trap: walking focusable elements and moving focus by hand isn't
# exposed through leptos's own API, so this reaches the DOM directly.
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "Node", "NodeList"] }
wasm-bindgen = "0.2"
