[package]
name = "xtask"
description = "Dev tooling: a testcontainers-backed Postgres for local dev and sqlx offline-cache generation."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["signal"] }
sqlx = { workspace = true }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
