[package]
name = "xtask"
description = "Dev tooling: a testcontainers-backed Postgres for local dev and sqlx offline-cache generation."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1"
clap.workspace = true
tokio = { workspace = true, features = ["signal", "process"] }
sqlx = { workspace = true }
testcontainers-modules.workspace = true
